--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,4 @@ board = megaatmega2560
 framework = arduino
 upload_port = COM8
 monitor_speed = 115200
-lib_deps = 
-	milesburton/DallasTemperature@^3.9.1
-	paulstoffregen/Ethernet@0.0.0-alpha+sha.9f41e8231b
-	knolleary/PubSubClient@^2.8
-	bblanchon/ArduinoJson@^6.17.2
-	arduino-libraries/ArduinoHttpClient@^0.4.0
+lib_deps = arduino-libraries/Servo@^1.1.8
