--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,13 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-upload_port = COM8
+upload_port = COM4
 monitor_speed = 115200
-lib_deps = arduino-libraries/Servo@^1.1.8
+lib_deps = 
+	arduino-libraries/Servo@^1.1.8
+	milesburton/DallasTemperature@^3.9.1
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/ArduinoHttpClient@^0.4.0
+	skaarj1989/mWebSockets@^1.5.0
+	bblanchon/ArduinoJson@^6.19.4
+	jandrassy/ArduinoOTA@^1.0.8
