--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-upload_port = COM5
+upload_port = COM7
 monitor_speed = 115200
-lib_deps = arduino-libraries/Servo@^1.1.8
+lib_deps = 
+	arduino-libraries/Servo@^1.1.8
+	knolleary/PubSubClient@^2.8
